<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright 2016-2025 Open Text.

    The only warranties for products and services of Open Text and
    its affiliates and licensors (“Open Text”) are as may be set forth
    in the express warranty statements accompanying such products and services.
    Nothing herein should be construed as constituting an additional warranty.
    Open Text shall not be liable for technical or editorial errors or
    omissions contained herein. The information contained herein is subject
    to change without notice.

    Except as specifically indicated otherwise, this document contains
    confidential information and a valid license is required for possession,
    use or copying. If this work is provided to the U.S. Government,
    consistent with FAR 12.211 and 12.212, Commercial Computer Software,
    Computer Software Documentation, and Technical Data for Commercial Items are
    licensed to the U.S. Government under vendor's standard commercial license.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.microfocus.adm.almoctane.sdk</groupId>
    <artifactId>sdk-root</artifactId>
    <packaging>pom</packaging>
    <version>26.4-SNAPSHOT</version>
    <name>ALM Octane REST API SDK</name>
    <description>The Java SDK that can be used to access Octane's REST API without worrying about REST or HTTP
    </description>
    <url>https://github.com/MicroFocus/ALMOctaneJavaRESTSDK</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/MicroFocus/ALMOctaneJavaRESTSDK</url>
        <connection>scm:git:https://github.com/MicroFocus/ALMOctaneJavaRESTSDK.git</connection>
        <developerConnection>scm:git:ssh://github.com:MicroFocus/ALMOctaneJavaRESTSDK.git</developerConnection>
    </scm>

    <organization>
        <name>Open Text</name>
        <url>https://www.opentext.com/</url>
    </organization>

    <developers>
        <developer>
            <name>Spencer Bruce</name>
            <email>sbruce@opentext.com</email>
            <organization>Open Text</organization>
        </developer>
        <developer>
            <name>Silviu Anton</name>
            <email>santon@opentext.com</email>
            <organization>Open Text</organization>
        </developer>
    </developers>

    <modules>
        <module>sdk-src</module>
        <module>sdk-integration-tests</module>
        <module>sdk-usage-examples</module>
        <module>sdk-generate-entity-models-maven-plugin</module>
        <module>sdk-extension</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <java.version>21</java.version>

        <slf4j.version>2.0.18</slf4j.version>
        <logback.version>1.5.34</logback.version>

        <google-api-client.version>2.1.0</google-api-client.version>
        <guava.version>33.6.0-jre</guava.version>
        <org-json.version>20260522</org-json.version>
        <json-path.version>3.0.0</json-path.version>

        <commons-beanutils.version>1.11.0</commons-beanutils.version>
        <commons-io.version>2.22.0</commons-io.version>
        <commons-lang3>3.20.0</commons-lang3>

        <maven-release.version>2.5.3</maven-release.version>
        <maven-surefire.version>3.5.6</maven-surefire.version>
        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
        <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
        <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
        <maven-compiler.version>3.15.0</maven-compiler.version>
        <maven-plugin-plugin.version>3.15.2</maven-plugin-plugin.version>
        <maven-plugin-api.version>3.9.16</maven-plugin-api.version>
        <maven-plugin-annotations.version>3.15.2</maven-plugin-annotations.version>
        <nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>
        <junit-jupiter.version>6.1.0</junit-jupiter.version>

        <org.apache.velocity.version>2.4.1</org.apache.velocity.version>

        <junit.version>4.13.2</junit.version>
        <mockito.version>5.23.0</mockito.version>

        <jetty.version>12.1.10</jetty.version>
        <jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
        <mockserver.version>7.1.0</mockserver.version>

        <google-libraries-bom.version>26.84.0</google-libraries-bom.version>
        <jacoco-maven-plugin.version>0.8.15</jacoco-maven-plugin.version>
        <license-maven-plugin.version>5.0.0</license-maven-plugin.version>
    </properties>

    <dependencies>
        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>libraries-bom</artifactId>
                <version>${google-libraries-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>${org-json.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.jayway.jsonpath</groupId>
                        <artifactId>json-path</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.jayway.jsonpath</groupId>
                <artifactId>json-path</artifactId>
                <version>${json-path.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${commons-beanutils.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <!-- License headers are checked during the verify phase, the build will fail if a file is missing the header. -->
        <!-- To fix license errors, use the following commands on the root pom. -->
        <!-- mvn com.mycila:license-maven-plugin:format (add headers if missing) -->
        <!-- mvn com.mycila:license-maven-plugin:remove (remove existing header) -->
        <plugins>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${license-maven-plugin.version}</version>
                <configuration>
                    <!-- Update this file accordingly to change the license everywhere -->
                    <header>LICENSE.txt</header>
                    <excludes>
                        <exclude>README.MD</exclude>
                        <exclude>.gitignore</exclude>
                        <exclude>.LICENSE.txt</exclude>
                        <exclude>**/**.html</exclude>
                        <exclude>**/**.vm</exclude>
                        <exclude>**/**.properties</exclude>
                        <exclude>**/src/test/resources/**</exclude>
                        <exclude>***/src/main/resources/**</exclude>
                        <!-- Taken from third-party -->
                        <exclude>**/SLF4JLogChute.java</exclude>
                        <exclude>**/**.versionBackup</exclude>
                        <exclude>**/**.log</exclude>
                    </excludes>
                    <mapping>
                        <!--Do not use javadoc comments for .java files, use only /* -->
                        <!--Not sure why that's the default.-->
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire.version}</version>
                    <configuration>
                        <argLine>--add-opens java.base/java.nio.charset=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>coverage</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.jacoco</groupId>
                            <artifactId>jacoco-maven-plugin</artifactId>
                            <version>${jacoco-maven-plugin.version}</version>
                            <executions>
                                <execution>
                                    <goals><goal>prepare-agent</goal></goals>
                                </execution>
                                <execution>
                                    <id>report</id>
                                    <phase>test</phase>
                                    <goals><goal>report</goal></goals>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>build-deployment</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>${maven-javadoc-plugin.version}</version>
                            <executions>
                                <execution>
                                    <id>attach-javadocs</id>
                                    <goals>
                                        <goal>jar</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-source-plugin</artifactId>
                            <version>${maven-source-plugin.version}</version>
                            <executions>
                                <execution>
                                    <id>attach-sources</id>
                                    <goals>
                                        <goal>jar</goal>
                                        <goal>test-jar</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-gpg-plugin</artifactId>
                            <version>${maven-gpg-plugin.version}</version>
                            <executions>
                                <execution>
                                    <id>sign-artifacts</id>
                                    <phase>verify</phase>
                                    <goals>
                                        <goal>sign</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>${nexus-staging-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>release-repository</serverId>
                            <nexusUrl>https://ossrh-staging-api.central.sonatype.com/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <distributionManagement>
        <repository>
            <id>release-repository</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>snapshot-repository</id>
            <name>Maven2 Snapshot Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>
</project>

